src/test/resources/test/coco/valid/K1.struct
package test.coco.valid;

struct K1 {
  Z f1;
  Q f2;
  test.coco.valid.S1[] f3;
}
